--- a/SequentTiles/.settings/com.rim.tad.tools.qml.core.prefs
+++ b/SequentTiles/.settings/com.rim.tad.tools.qml.core.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+white-list.coinToSubtract=
+white-list.dialogMsg=
+white-list.dialogTitle=
+white-list.dialogType=
 white-list.sequentTiles=
